WexGit/Wex_DX/force-app/main/default/objects/FleetCard_Program__c/FleetCard_Program__c.object-meta.xml
<CustomObject>
    <label>Fleet Card Program</label>
    <nameField>
        <displayFormat>A-{000000}</displayFormat>
        <label>Fleet Card Program Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Fleet Card Programs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>