WexGit/Wex_DX/force-app/main/default/objects/FleetCard_Program__c/fields/Monthly__c.field-meta.xml
<CustomField>
    <fullName>Monthly__c</fullName>
    <label>Monthly Subscription/Unit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>