WexGit/Wex_DX/force-app/main/default/objects/FleetCard_Program__c/fields/Program__c.field-meta.xml
<CustomField>
    <fullName>Program__c</fullName>
    <label>Program</label>
    <referenceTo>Programs__c</referenceTo>
    <relationshipLabel>Fleet Card Programs</relationshipLabel>
    <relationshipName>Fleet_Card_Programs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>