WexGit/Wex_DX/force-app/main/default/objects/FleetCard_Program__c/fields/Programs__c.field-meta.xml
<CustomField>
    <fullName>Programs__c</fullName>
    <label>Programs</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CFN</fullName>
            </value>
            <value>
                <fullName>PacPride</fullName>
            </value>
            <value>
                <fullName>Fuelman</fullName>
            </value>
            <value>
                <fullName>Fuelman Private Label</fullName>
            </value>
            <value>
                <fullName>Comchek Fleet</fullName>
            </value>
            <value>
                <fullName>WEX</fullName>
            </value>
            <value>
                <fullName>WEX Private Label</fullName>
            </value>
            <value>
                <fullName>Voyager</fullName>
            </value>
            <value>
                <fullName>MC Fleet Issuer</fullName>
            </value>
            <value>
                <fullName>FleetOne</fullName>
            </value>
            <value>
                <fullName>FleetOne Private Label</fullName>
            </value>
            <value>
                <fullName>TCH</fullName>
            </value>
            <value>
                <fullName>Proprietary Cardlock</fullName>
            </value>
            <value>
                <fullName>Oil Company Fleet</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>