WexGit/Wex_DX/force-app/main/default/objects/FleetCard_Program__c/fields/Total_Spend__c.field-meta.xml
<CustomField>
    <fullName>Total_Spend__c</fullName>
    <label>Total Spend</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>