WexGit/Wex_DX/force-app/main/default/objects/FleetCard_Program__c/recordTypes/Fleet_Card_Program.recordType-meta.xml
<RecordType>
    <fullName>Fleet_Card_Program</fullName>
    <active>true</active>
    <description>This is for a fleet card program</description>
    <label>Fleet Card Program</label>
</RecordType>