WexGit/Wex_DX/force-app/main/default/objects/FleetCard_Program__c/recordTypes/Telematics_Program.recordType-meta.xml
<RecordType>
    <fullName>Telematics_Program</fullName>
    <active>false</active>
    <description>Telematics_Program</description>
    <label>Telematics Program</label>
</RecordType>